[package]
name = "perform_wasm"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.68"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
once_cell = "1.16.0"
reqwest = "0.11.13"
thiserror = "1.0.38"
tokio = { version = "1.23.0", default-features = false, features = ["sync"] }
uuid = { version = "1.2.2", features = ["v4", "js"] }
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.33"
wasm-logger = "0.2.0"
