[package]
name = "manual_test"
version = "0.1.0"
edition = "2021"
authors = ["Akira Kano <a.kano1101@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
perform_wasm = { path = "../" }
reqwest = "0.11.13"
tokio = { version = "1.23.0", default-features = false, features = ["sync"] }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
